--- a/renderer/src/App.scss
+++ b/renderer/src/App.scss
@@ -1,5 +1,28 @@
 .root-app{
-  img{
-    display: block;
-  }
+  position: relative;
+}
+.root-routes-group{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+}
+.fade-enter {
+  opacity: 0;
+  position: absolute;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity ease 300ms;
+}
+.fade-exit {
+  opacity: 1;
+  position: absolute;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity ease 300ms;
+}
+.fade-exit-done {
+  opacity: 0;
 }
