--- a/renderer/src/views/home/index.scss
+++ b/renderer/src/views/home/index.scss
@@ -5,4 +5,17 @@
       opacity: .7;
     }
   }
+  .form{
+    .row{
+      padding: 8px 20px;
+      .snapshot{
+        img{
+          display: block;
+          border-radius: 5px;
+          border: 1px solid #d9d9d9;
+          max-width: 100px;
+        }
+      }
+    }
+  }
 }
