--- a/renderer/src/views/picker/index.scss
+++ b/renderer/src/views/picker/index.scss
@@ -6,6 +6,7 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
+  z-index: 1;
   .picker-content{
     flex: 1;
     overflow: hidden;
@@ -56,5 +57,34 @@
   }
   .footer{
     border-top: 1px solid #f1f1f1;
+  }
+}
+.picker-history-modal{
+  .history-list{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    .img{
+      width: 50%;
+      &:nth-child(2n){
+        padding-left: 5px;
+      }
+      &:nth-child(2n + 1){
+        padding-right: 5px;
+      }
+      p{
+        margin: 0;
+        padding: 5px;
+        text-align: center;
+      }
+      img{
+        display: block;
+        width: 100%;
+        &:hover{
+          cursor: pointer;
+          opacity: .7;
+        }
+      }
+    }
   }
 }
