--- a/renderer/src/views/process-form/index.scss
+++ b/renderer/src/views/process-form/index.scss
@@ -11,7 +11,9 @@
       display: flex;
       align-items: center;
       min-height: 32px;
-      *{
+    }
+    .line-space{
+      & > *{
         &:not(:last-child){
           margin-right: 10px;
         }
