--- a/renderer/src/views/process-form/index.scss
+++ b/renderer/src/views/process-form/index.scss
@@ -1,4 +1,33 @@
 .process-form{
+  .form-level{
+    padding: 20px 10px;
+  }
+  .form-level-content{
+    & > *:not(:first-child){
+      margin-top: 10px;
+    }
+  }
+  .form-level-odd{
+    .row{
+      background: #e6f7ff;
+    }
+  }
+  .form-level-even{
+    .row{
+      background: #fff7e6;
+    }
+  }
+  .add-row{
+    background: #fcffe6;
+    .ant-btn{
+      font-size: 12px;
+      color: #666;
+    }
+  }
+  .conditional-text{
+    color: #006d75;
+    font-size: 16px;
+  }
   .link{
     &:hover{
       cursor: pointer;
@@ -10,7 +39,12 @@
     cursor: not-allowed !important;
   }
   .row{
-    padding: 5px 20px;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border: 1px solid #d9d9d9;
+    &:not(:last-child){
+      margin-bottom: 10px;
+    }
     .line{
       display: flex;
       align-items: center;
