--- a/renderer/src/views/home/index.scss
+++ b/renderer/src/views/home/index.scss
@@ -1,3 +1,30 @@
 .home{
-
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .home-content{
+    flex: 1;
+    height: 100%;
+    overflow: auto;
+  }
+  .process-operator{
+    padding: 10px;
+    position: relative;
+    z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.15) 0 0 30px 20px;
+    display: flex;
+    align-items: center;
+    .save{
+      padding: 0 0 0 10px;
+    }
+    .config{
+      display: flex;
+      align-items: center;
+      flex: 1;
+      padding: 0 10px;
+      & > *:not(:last-child){
+        margin-right: 10px;
+      }
+    }
+  }
 }
