--- a/renderer/src/views/process-form/index.scss
+++ b/renderer/src/views/process-form/index.scss
@@ -1,6 +1,9 @@
 @import "src/common/styles/variable";
 
 .process-form{
+  *{
+    -webkit-user-select: none;
+  }
   .form-level{
     padding: 20px 10px;
   }
@@ -10,12 +13,12 @@
     }
   }
   .form-level-odd{
-    .row{
+    & > .form-level-content  > .form-row-wrapper > .row{
       background: #e6f7ff;
     }
   }
   .form-level-even{
-    .row{
+    & > .form-level-content > .form-row-wrapper > .row{
       background: #fff7e6;
     }
   }
@@ -62,7 +65,7 @@
     }
   }
   .row{
-    padding: 10px 10px;
+    padding: 5px 10px;
     border-radius: 5px;
     border: 1px solid #d9d9d9;
     &:not(:last-child){
@@ -79,7 +82,7 @@
         display: block;
         border-radius: 5px;
         border: 1px solid #d9d9d9;
-        max-width: 32px;
+        width: 32px;
       }
     }
   }
