--- a/renderer/src/components/layout/Header.scss
+++ b/renderer/src/components/layout/Header.scss
@@ -8,6 +8,14 @@
     flex: 1;
     -webkit-app-region: drag;
     height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    color: #666;
+    .icon{
+      height: 100%;
+      padding: 3px;
+    }
   }
   .operation{
     display: flex;
@@ -25,6 +33,12 @@
     .minimize{
       &:hover{
         background: $color-background-l;
+        color: #ffffff;
+      }
+    }
+    .maximize{
+      &:hover{
+        background: #1890ff;
         color: #ffffff;
       }
     }
